--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                 </div>
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">C</h3>
+                                        <h3 class="skills__name">C++</h3>
                                         <span class="skills__number">60%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -597,7 +597,7 @@
                                     <span class="qualification__subtitle">Reffinete Cosmetics Manufacturing Corporation</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2017 - 2018 ( 2 contracts )
+                                        2018 End of Contract
                                     </div>
                                 </div>
 
